# lib-cpp-data-algo-math

./: CMakeLists.txt  README.md  main.cpp
include/fsd/core/: array.hpp  binary_tree.hpp  deque.hpp  double_list.hpp  search_tree.hpp  single_list.hpp  stack.hpp
src/: Array.h  Deque.h  DoubleList.h  Queue.h  SearchTree.h  SingleList.h  Vector.h  main.cpp
src/algebra/: matrix.hpp
src/algebra/matrix/: matrix.hpp  matrix_algorithms.hpp  matrix_aliases.hpp  matrix_camera.hpp  matrix_fwd.hpp  matrix_operations.hpp  matrix_storage.hpp  matrix_transform.hpp
tests/: CMakeLists.txt  test_main.cpp
tests/core/: array_tests.cpp  binary_tree_tests.cpp  deque_tests.cpp  double_list_tests.cpp  queue_tests.cpp  search_tree_tests.cpp  single_list_tests.cpp  stack_tests.cpp  vector_tests.cpp
